# syne

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  setup.sh
.cargo/: config.toml
.github/workflows/: publish.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sudosync/: MainActivity.kt
lib/: main.dart
lib/screens/: app_dialog.dart  control_panel.dart  file_explorer.dart  home_page.dart  image_viewer.dart  login_page.dart  network_page.dart  processes_page.dart  profile_page.dart  server_list_page.dart  system_monitor.dart  system_updates_page.dart  terminal_screen.dart  video_player_page.dart
lib/service/: server_storage.dart  ssh_service.dart
lib/types/: server.dart
metrics/: .gitignore  Cargo.toml  README.md
metrics/examples/: alsa.rs  brightness.rs  defnet.rs  gpu.rs  net.rs
metrics/src/: main.rs  metrics.rs  types.rs  utils.rs
test/: widget_test.dart
