[package]
name = "metrics"
version = "2.1.1"
edition = "2024"

[features]
gpu = ["dep:gfxinfo"]

[dependencies]
chrono = "0.4.45"
sysinfo = "0.39.5"
if-addrs = "0.15.0"
rmp-serde = "1.3.1"
netstat2 = "0.11.2"
default-net = "0.22.0"
serde_json = "1.0.145"
starship-battery = "0.11.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
gfxinfo = { version = "0.1", features = ["gpu_info"],  optional = true }
reqwest = { version = "0.13.3", default-features = false, features = ["default-tls", "json"] }

